========================
   beancount: CHANGES
========================
Note: This file contains only changes in the 'default' branch.


2016-12-10

  - Made Amount, Posting, Cost and CostSpec all immutable classes that inherit
    from typing.NamedTuple.

  - Removed mutable method Posting.add().


2016-12-05

  - Merged changes made for calculating wash sales a long time ago. I had
    implemnted a temporary kludge to carry dates on all augmenting postings,
    left it in a branch so I could use it there for taxes every year. Now that
    the booking branch is merged, this is supported by default, so I could undo
    that kludge. Some changes remained:

    * The Inventory.add_amount() method used to return the modified position.
      Now it returns the position before being modified, which is more useful.

    * The list-wash-sales.py script has been updated. It now works on 'default'.

    * The 'carry_date_and_book_cost' branch has been merged away.


2016-12-04

  - Made .tags and .links attributes of b.data.Transaction and b.data.Document
    directives ensured to always be a set when they're empty. If there are no
    tags (or links), those attributes are set to b.data.EMPTY_SET, whose value
    is a frozenset(). This should make the processing of those attributes a bit
    simpler.

    Note that if you create transactions from plugins and their tags and/or
    links attributes are set None, they will now fail. The right thing to do is
    to set their value to an empty set, or reuse the immutable
    beancount.core.data.EMPTY_SET object.

    If you need to circumvent this temporarily, set the following option in your
    file, which will allow None again:

      option "allow_deprecated_none_for_tags_and_links" "TRUE"

    See {1989ba9e0e79} for details.

  - Updated all copyright and license notices on all files.

  - Added a script to automatically verify that all source files include a
    copyright notice.
