@@ -4,6 +4,11 @@
 Note: This file contains only changes in the 'default' branch.
 
 
+2016-12-11
+
+  - Changed b.p.split_expenses outputs to be more useful.
+
+
 2016-12-10
 
   - Made Amount, Posting, Cost and CostSpec all immutable classes that inherit
